--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -579,19 +579,12 @@ SOCIAL ICON
 .biography{
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
-    border:1px solid #EEEEEE;
+    padding-bottom: 10px;
+    border:2px solid #EEEEEE;
     position: relative;
 }
 
-.biography::after{
-    content: "";
-    border-bottom: 1px solid #EEEEEE;
-    position: absolute;
-    bottom: -3px;
-    width: 100%;
-    border-radius: 10px;
-    height: 20px;
-}
+
 
 .logo{
     position: absolute;
