--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -398,7 +398,7 @@ ul.list-check li::before {
 SOCIAL ICON 
 -------------------------------------------*/
 .social-icons {
-    margin-top: 0px;
+    margin: 0px;
 }
   
 .social-icons a i {
